cmake_minimum_required(VERSION 3.17)
project(Array)

set(CMAKE_CXX_STANDARD 14)

add_executable(Array main.cpp)

add_executable(704 704.cpp)
add_executable(35 35.cpp)
add_executable(34 34.cpp)
add_executable(69 69.cpp)
add_executable(367 367.cpp)
add_executable(27 27.cpp)
add_executable(26 26.cpp)
add_executable(283 283.cpp)