cmake_minimum_required(VERSION 3.17)
project(Array)

set(CMAKE_CXX_STANDARD 14)

add_executable(Array main.cpp)

add_executable(704 704.cpp)
add_executable(35 35.cpp)
add_executable(34 34.cpp)
add_executable(69 69.cpp)
add_executable(367 367.cpp)
add_executable(27 27.cpp)
add_executable(26 26.cpp)
add_executable(283 283.cpp)
add_executable(977 977.cpp)
add_executable(209 209.cpp)
add_executable(904 904.cpp)
add_executable(59 59.cpp)
add_executable(54 54.cpp)
add_executable(704_second 704_second.cpp)
add_executable(35_second 35_second.cpp)
add_executable(34_second 34_second.cpp)
add_executable(69_second 69_second.cpp)
add_executable(367_second 367_second.cpp)
add_executable(27_second 27_second.cpp)
add_executable(26_second 26_second.cpp)
add_executable(283_second 283_second.cpp)
add_executable(844_second 844_second.cpp)
add_executable(977_second 977_second.cpp)