cmake_minimum_required(VERSION 3.17)
project(BFS_dfs)

set(CMAKE_CXX_STANDARD 14)

add_executable(BFS_dfs main.cpp)

add_executable(797 797.cpp)
add_executable(200 200.cpp)
add_executable(200_bfs 200_bfs.cpp)
add_executable(695_dfs 695_dfs.cpp)
add_executable(695_bfs 695_bfs.cpp)
add_executable(1020_dfs 1020_dfs.cpp)
add_executable(130_dfs 130_dfs.cpp)
add_executable(1020_dfs_2 1020_dfs_2.cpp)
add_executable(417_dfs 417_dfs.cpp)
add_executable(130_second 130_second.cpp)
add_executable(ali_2 ali_2.cpp)
add_executable(827 827.cpp)