cmake_minimum_required(VERSION 3.17)
project(BTree)

set(CMAKE_CXX_STANDARD 14)

add_executable(BTree main.cpp)
add_executable(144 144.cpp)
add_executable(145 145.cpp)
add_executable(94 94.cpp)
add_executable(102 102.cpp)
add_executable(107 107.cpp)
add_executable(199 199.cpp)
add_executable(637 637.cpp)
add_executable(429 429.cpp)
add_executable(515 515.cpp)
add_executable(116 116.cpp)
add_executable(104 104.cpp)
add_executable(111 111.cpp)