cmake_minimum_required(VERSION 3.17)
project(BTree)

set(CMAKE_CXX_STANDARD 14)

add_executable(BTree main.cpp)
add_executable(144 144.cpp)
add_executable(145 145.cpp)
add_executable(94 94.cpp)
add_executable(102 102.cpp)
add_executable(107 107.cpp)
add_executable(199 199.cpp)
add_executable(637 637.cpp)
add_executable(429 429.cpp)
add_executable(515 515.cpp)
add_executable(116 116.cpp)
add_executable(104 104.cpp)
add_executable(111 111.cpp)
add_executable(226 226.cpp)
add_executable(101 101.cpp)
add_executable(100 100.cpp)
add_executable(572 572.cpp)
add_executable(559 559.cpp)
add_executable(222 222.cpp)
add_executable(110 110.cpp)
add_executable(257 257.cpp)
add_executable(404 404.cpp)
add_executable(513 513.cpp)
add_executable(112 112.cpp)
add_executable(113 113.cpp)
add_executable(106 106.cpp)
add_executable(105 105.cpp)
add_executable(654 654.cpp)
add_executable(617 617.cpp)
add_executable(700 700.cpp)
add_executable(98 98.cpp)
add_executable(530 530.cpp)
add_executable(501 501.cpp)
add_executable(236 236.cpp)
add_executable(235 235.cpp)
add_executable(701 701.cpp)
add_executable(450 450.cpp)
add_executable(669 669.cpp)
add_executable(108 108.cpp)
add_executable(538 538.cpp)
add_executable(144_second 144_second.cpp)
add_executable(94_second 94_second.cpp)
add_executable(145_second 145_second.cpp)
add_executable(102_second 102_second.cpp)
add_executable(107_second 107_second.cpp)
add_executable(199_second 199_second.cpp)
add_executable(637_second 637_second.cpp)
add_executable(429_second 429_second.cpp)
add_executable(226_second 226_second.cpp)
add_executable(101_second 101_second.cpp)
add_executable(104_second 104_second.cpp)
add_executable(559_second 559_second.cpp)
add_executable(111_second 111_second.cpp)
add_executable(222_second 222_second.cpp)
add_executable(110_second 110_second.cpp)
add_executable(257_second 257_second.cpp)
add_executable(404_second 404_second.cpp)
add_executable(513_second 513_second.cpp)
add_executable(112_second 112_second.cpp)