cmake_minimum_required(VERSION 3.17)
project(BackTracking)

set(CMAKE_CXX_STANDARD 14)

add_executable(BackTracking main.cpp)

add_executable(77 77.cpp)
add_executable(216 216.cpp)
add_executable(17 17.cpp)
add_executable(39 39.cpp)
add_executable(40 40.cpp)
add_executable(131 131.cpp)
add_executable(93 93.cpp)
add_executable(78 78.cpp)
add_executable(90 90.cpp)
add_executable(401 401.cpp)