cmake_minimum_required(VERSION 3.17)
project(BackTracking)

set(CMAKE_CXX_STANDARD 14)

add_executable(BackTracking main.cpp)

add_executable(77 77.cpp)
add_executable(216 216.cpp)
add_executable(17 17.cpp)
add_executable(39 39.cpp)
add_executable(40 40.cpp)
add_executable(131 131.cpp)
add_executable(93 93.cpp)
add_executable(78 78.cpp)
add_executable(90 90.cpp)
add_executable(491 491.cpp)
add_executable(332 332.cpp)
add_executable(test_20221023 test_20221023.cpp)
add_executable(46 46.cpp)
add_executable(47 47.cpp)
add_executable(51 51.cpp)
add_executable(37 37.cpp)
add_executable(77_second 77_second.cpp)
add_executable(216_second 216_second.cpp)
add_executable(17_second 17_second.cpp)