cmake_minimum_required(VERSION 3.17)
project(Dynamic)

set(CMAKE_CXX_STANDARD 14)

add_executable(Dynamic main.cpp)

add_executable(509 509.cpp)
add_executable(70 70.cpp)
add_executable(746 746.cpp)
add_executable(62 62.cpp)
add_executable(63 63.cpp)
add_executable(343 343.cpp)
add_executable(96 96.cpp)
add_executable(bag bag.cpp)
add_executable(416 416.cpp)
add_executable(1049 1049.cpp)
add_executable(494 494.cpp)
add_executable(474 474.cpp)
add_executable(518 518.cpp)
add_executable(377 377.cpp)
add_executable(322 322.cpp)
add_executable(279 279.cpp)
add_executable(139 139.cpp)
add_executable(198 198.cpp)
add_executable(213 213.cpp)
add_executable(337 337.cpp)
add_executable(121 121.cpp)