cmake_minimum_required(VERSION 3.17)
project(Dynamic)

set(CMAKE_CXX_STANDARD 14)

add_executable(Dynamic main.cpp)

add_executable(509 509.cpp)
add_executable(70 70.cpp)
add_executable(746 746.cpp)
add_executable(62 62.cpp)
add_executable(63 63.cpp)
add_executable(343 343.cpp)
add_executable(96 96.cpp)
add_executable(bag bag.cpp)
add_executable(416 416.cpp)
add_executable(1049 1049.cpp)
add_executable(494 494.cpp)
add_executable(474 474.cpp)
add_executable(518 518.cpp)
add_executable(377 377.cpp)
add_executable(322 322.cpp)
add_executable(279 279.cpp)
add_executable(139 139.cpp)
add_executable(198 198.cpp)
add_executable(213 213.cpp)
add_executable(337 337.cpp)
add_executable(121 121.cpp)
add_executable(122 122.cpp)
add_executable(123 123.cpp)
add_executable(188 188.cpp)
add_executable(309 309.cpp)
add_executable(714 714.cpp)
add_executable(300 300.cpp)
add_executable(674 674.cpp)
add_executable(718 718.cpp)
add_executable(1143 1143.cpp)
add_executable(1035 1035.cpp)
add_executable(53 53.cpp)
add_executable(392 392.cpp)
add_executable(583 583.cpp)
add_executable(72 72.cpp)
add_executable(115 115.cpp)