cmake_minimum_required(VERSION 3.17)
project(Dynamic)

set(CMAKE_CXX_STANDARD 14)

add_executable(Dynamic main.cpp)

add_executable(509 509.cpp)
add_executable(70 70.cpp)
add_executable(746 746.cpp)
add_executable(62 62.cpp)
add_executable(63 63.cpp)
add_executable(343 343.cpp)
add_executable(96 96.cpp)
add_executable(bag bag.cpp)
add_executable(416 416.cpp)
add_executable(1049 1049.cpp)
add_executable(494 494.cpp)
add_executable(474 474.cpp)
add_executable(518 518.cpp)
add_executable(377 377.cpp)
add_executable(322 322.cpp)
add_executable(279 279.cpp)
add_executable(139 139.cpp)
add_executable(198 198.cpp)
add_executable(213 213.cpp)
add_executable(337 337.cpp)
add_executable(121 121.cpp)
add_executable(122 122.cpp)
add_executable(123 123.cpp)
add_executable(188 188.cpp)
add_executable(309 309.cpp)
add_executable(714 714.cpp)
add_executable(300 300.cpp)
add_executable(674 674.cpp)
add_executable(718 718.cpp)
add_executable(1143 1143.cpp)
add_executable(1035 1035.cpp)
add_executable(53 53.cpp)
add_executable(392 392.cpp)
add_executable(583 583.cpp)
add_executable(72 72.cpp)
add_executable(115 115.cpp)
add_executable(647 647.cpp)
add_executable(516 516.cpp)
add_executable(509_second 509_second.cpp)
add_executable(70_second 70_second.cpp)
add_executable(746_second 746_second.cpp)
add_executable(122_second 122_second.cpp)
add_executable(121_second 121_second.cpp)
add_executable(123_second 123_second.cpp)
add_executable(188_second 188_second.cpp)
add_executable(309_second 309_second.cpp)
add_executable(714_second 714_second.cpp)
add_executable(bag_second bag_second.cpp)
add_executable(416_second 416_second.cpp)
add_executable(1049_second 1049_second.cpp)
add_executable(494_second 494_second.cpp)
add_executable(474_second 474_second.cpp)
add_executable(518_second 518_second.cpp)
add_executable(377_second 377_second.cpp)
add_executable(322_second 322_second.cpp)
add_executable(279_second 279_second.cpp)
add_executable(139_second 139_second.cpp)
add_executable(198_second 198_second.cpp)
add_executable(213_second 213_second.cpp)
add_executable(337_second 337_second.cpp)
add_executable(62_second 62_second.cpp)
add_executable(63_second 63_second.cpp)
add_executable(343_second 343_second.cpp)
add_executable(300_second 300_second.cpp)
add_executable(674_second 674_second.cpp)
add_executable(718_second 718_second.cpp)
add_executable(1143_second 1143_second.cpp)