cmake_minimum_required(VERSION 3.17)
project(Greedy)

set(CMAKE_CXX_STANDARD 14)

add_executable(Greedy main.cpp)

add_executable(455 455.cpp)
add_executable(376 376.cpp)
add_executable(53 53.cpp)
add_executable(122 122.cpp)
add_executable(55 55.cpp)
add_executable(45 45.cpp)
add_executable(1005 1005.cpp)
add_executable(134 134.cpp)
add_executable(135 135.cpp)
add_executable(860 860.cpp)
add_executable(406 406.cpp)
add_executable(452 452.cpp)