cmake_minimum_required(VERSION 3.17)
project(Greedy)

set(CMAKE_CXX_STANDARD 14)

add_executable(Greedy main.cpp)

add_executable(455 455.cpp)
add_executable(376 376.cpp)
add_executable(53 53.cpp)
add_executable(122 122.cpp)
add_executable(55 55.cpp)
add_executable(45 45.cpp)
add_executable(1005 1005.cpp)
add_executable(134 134.cpp)
add_executable(135 135.cpp)
add_executable(860 860.cpp)
add_executable(406 406.cpp)
add_executable(452 452.cpp)
add_executable(435 435.cpp)
add_executable(763 763.cpp)
add_executable(56 56.cpp)
add_executable(738 738.cpp)
add_executable(968 968.cpp)
add_executable(455_second 455_second.cpp)
add_executable(376_second 376_second.cpp)