cmake_minimum_required(VERSION 3.17)
project(HashTable)

set(CMAKE_CXX_STANDARD 14)

add_executable(HashTable main.cpp)
add_executable(242 242.cpp)
add_executable(383 383.cpp)
add_executable(49 49.cpp)
add_executable(438 438.cpp)
add_executable(349 349.cpp)
add_executable(350 350.cpp)
add_executable(202 202.cpp)
add_executable(1 1.cpp)
add_executable(454 454.cpp)
add_executable(15 15.cpp)
add_executable(18 18.cpp)