cmake_minimum_required(VERSION 3.17)
project(HashTable)

set(CMAKE_CXX_STANDARD 14)

add_executable(HashTable main.cpp)
add_executable(242 242.cpp)
add_executable(383 383.cpp)
add_executable(49 49.cpp)
add_executable(438 438.cpp)
add_executable(349 349.cpp)
add_executable(350 350.cpp)
add_executable(202 202.cpp)
add_executable(1 1.cpp)
add_executable(454 454.cpp)
add_executable(15 15.cpp)
add_executable(28 28.cpp)
add_executable(18 18.cpp)
add_executable(242_second 242_second.cpp)
add_executable(383_second 383_second.cpp)
add_executable(49_second 49_second.cpp)
add_executable(438_second 438_second.cpp)
add_executable(349_second 349_second.cpp)
add_executable(350_second 350_second.cpp)
add_executable(202_second 202_second.cpp)
add_executable(1_second 1_second.cpp)
add_executable(454_second 454_second.cpp)
add_executable(15_second 15_second.cpp)
add_executable(18_second 18_second.cpp)