cmake_minimum_required(VERSION 3.17)
project(Linklist)

set(CMAKE_CXX_STANDARD 14)

add_executable(Linklist main.cpp)
add_executable(203 203.cpp)
add_executable(707 707.cpp)
add_executable(206 206.cpp)
add_executable(24 24.cpp)
add_executable(19 19.cpp)
add_executable(0207 0207.cpp)
add_executable(142 142.cpp)
add_executable(203_second 203_second.cpp)
add_executable(707_second 707_second.cpp)
add_executable(206_second 206_second.cpp)
add_executable(24_second 24_second.cpp)
add_executable(19_second 19_second.cpp)
add_executable(0207_second 0207_second.cpp)
add_executable(task_4 task_4.cpp)
add_executable(task_3 task_3.cpp)
add_executable(task_6 task_6.cpp)
add_executable(142_second 142_second.cpp)
add_executable(203_third 203_third.cpp)