cmake_minimum_required(VERSION 3.17)
project(Monotonous_stack)

set(CMAKE_CXX_STANDARD 14)

add_executable(Monotonous_stack main.cpp)

add_executable(739 739.cpp)
add_executable(496 496.cpp)
add_executable(503 503.cpp)
add_executable(42 42.cpp)
add_executable(84 84.cpp)
add_executable(496_second 496_second.cpp)
add_executable(503_second 503_second.cpp)
add_executable(42_second 42_second.cpp)