cmake_minimum_required(VERSION 3.17)
project(OFFER)

set(CMAKE_CXX_STANDARD 14)

add_executable(OFFER main.cpp)
add_executable(offer_03 offer_03.cpp)
add_executable(offer_04 offer_04.cpp)
add_executable(offer_05 offer_05.cpp)
add_executable(offer_06 offer_06.cpp)
add_executable(offer_07 offer_07.cpp)
add_executable(offer_09 offer_09.cpp)
add_executable(offer_10_1 offer_10_1.cpp)
add_executable(offer_10_2 offer_10_2.cpp)
add_executable(offer_11 offer_11.cpp)
add_executable(153 153.cpp)
add_executable(154 154.cpp)
add_executable(offer_12 offer_12.cpp)
add_executable(797 797.cpp)