cmake_minimum_required(VERSION 3.17)
project(OFFER)

set(CMAKE_CXX_STANDARD 14)

add_executable(OFFER main.cpp)
add_executable(offer_03 offer_03.cpp)
add_executable(offer_04 offer_04.cpp)
add_executable(offer_05 offer_05.cpp)
add_executable(offer_06 offer_06.cpp)
add_executable(offer_07 offer_07.cpp)
add_executable(offer_09 offer_09.cpp)
add_executable(offer_10_1 offer_10_1.cpp)
add_executable(offer_10_2 offer_10_2.cpp)
add_executable(offer_11 offer_11.cpp)
add_executable(153 153.cpp)
add_executable(154 154.cpp)
add_executable(offer_12 offer_12.cpp)
add_executable(797 797.cpp)
add_executable(offer_14_1 offer_14_1.cpp)
add_executable(offer_14_2 offer_14_2.cpp)
add_executable(offer_15 offer_15.cpp)
add_executable(offer_16 offer_16.cpp)
add_executable(offer_17 offer_17.cpp)
add_executable(offer_18 offer_18.cpp)
add_executable(offer_19 offer_19.cpp)
add_executable(offer_20 offer_20.cpp)
add_executable(offer_21 offer_21.cpp)
add_executable(offer_22 offer_22.cpp)
add_executable(offer_24 offer_24.cpp)
add_executable(offer_25 offer_25.cpp)
add_executable(offer_26 offer_26.cpp)
add_executable(offer_27 offer_27.cpp)