cmake_minimum_required(VERSION 3.17)
project(OFFER)

set(CMAKE_CXX_STANDARD 14)

add_executable(OFFER main.cpp)
add_executable(offer_03 offer_03.cpp)
add_executable(offer_04 offer_04.cpp)
add_executable(offer_05 offer_05.cpp)
add_executable(offer_06 offer_06.cpp)
add_executable(offer_07 offer_07.cpp)
add_executable(offer_09 offer_09.cpp)
add_executable(offer_10_1 offer_10_1.cpp)
add_executable(offer_10_2 offer_10_2.cpp)
add_executable(offer_11 offer_11.cpp)
add_executable(153 153.cpp)
add_executable(154 154.cpp)
add_executable(offer_12 offer_12.cpp)
add_executable(797 797.cpp)
add_executable(offer_14_1 offer_14_1.cpp)
add_executable(offer_14_2 offer_14_2.cpp)
add_executable(offer_15 offer_15.cpp)
add_executable(offer_16 offer_16.cpp)
add_executable(offer_17 offer_17.cpp)
add_executable(offer_18 offer_18.cpp)
add_executable(offer_19 offer_19.cpp)
add_executable(offer_20 offer_20.cpp)
add_executable(offer_21 offer_21.cpp)
add_executable(offer_22 offer_22.cpp)
add_executable(offer_24 offer_24.cpp)
add_executable(offer_25 offer_25.cpp)
add_executable(offer_26 offer_26.cpp)
add_executable(offer_27 offer_27.cpp)
add_executable(offer_28 offer_28.cpp)
add_executable(offer_29 offer_29.cpp)
add_executable(offer_30 offer_30.cpp)
add_executable(offer_31 offer_31.cpp)
add_executable(offer_32_1 offer_32_1.cpp)
add_executable(offer_32_2 offer_32_2.cpp)
add_executable(offer_32_3 offer_32_3.cpp)
add_executable(offer_33 offer_33.cpp)
add_executable(offer_34 offer_34.cpp)
add_executable(offer_35 offer_35.cpp)
add_executable(offer_36 offer_36.cpp)
add_executable(offer_37 offer_37.cpp)
add_executable(offer_38 offer_38.cpp)
add_executable(offer_39 offer_39.cpp)
add_executable(offer_40 offer_40.cpp)
add_executable(347 347.cpp)
add_executable(offer_41 offer_41.cpp)
add_executable(offer_42 offer_42.cpp)
add_executable(offer_43 offer_43.cpp)
add_executable(offer_44 offer_44.cpp)
add_executable(offer_46 offer_46.cpp)
add_executable(offer_47 offer_47.cpp)
add_executable(offer_48 offer_48.cpp)
add_executable(offer_49 offer_49.cpp)
add_executable(offer_50 offer_50.cpp)
add_executable(offer_51 offer_51.cpp)