cmake_minimum_required(VERSION 3.17)
project(Stack_and_Queue)

set(CMAKE_CXX_STANDARD 14)

add_executable(Stack_and_Queue main.cpp)
add_executable(232 232.cpp)
add_executable(252 252.cpp)
add_executable(20 20.cpp)
add_executable(1047 1047.cpp)
add_executable(150 150.cpp)
add_executable(239 239.cpp)
add_executable(232_second 232_second.cpp)
add_executable(225_second 225_second.cpp)
add_executable(20_second 20_second.cpp)
add_executable(150_second 150_second.cpp)
add_executable(239_second 239_second.cpp)
add_executable(1047_second 1047_second.cpp)
add_executable(347_second 347_second.cpp)