cmake_minimum_required(VERSION 3.17)
project(offer_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(offer_2 main.cpp)
add_executable(offer_2_010 offer_2_010.cpp)
add_executable(offer_2_004 offer_2_004.cpp)
add_executable(offer_2_083 offer_2_083.cpp)
add_executable(offer_2_084 offer_2_084.cpp)
add_executable(offer_2_005 offer_2_005.cpp)
add_executable(offer_2_007 offer_2_007.cpp)
add_executable(offer_2_006 offer_2_006.cpp)
add_executable(offer_2_008 offer_2_008.cpp)