cmake_minimum_required(VERSION 3.17)
project(offer_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(offer_2 main.cpp)
add_executable(offer_2_010 offer_2_010.cpp)
add_executable(offer_2_004 offer_2_004.cpp)
add_executable(offer_2_083 offer_2_083.cpp)
add_executable(offer_2_084 offer_2_084.cpp)
add_executable(offer_2_005 offer_2_005.cpp)
add_executable(offer_2_007 offer_2_007.cpp)
add_executable(offer_2_006 offer_2_006.cpp)
add_executable(offer_2_008 offer_2_008.cpp)
add_executable(offer_2_009 offer_2_009.cpp)
add_executable(offer_2_011 offer_2_011.cpp)
add_executable(offer_2_012 offer_2_012.cpp)
add_executable(offer_2_013 offer_2_013.cpp)
add_executable(offer_2_014 offer_2_014.cpp)
add_executable(offer_2_015 offer_2_015.cpp)
add_executable(offer_2_016 offer_2_016.cpp)
add_executable(offer_2_017 offer_2_017.cpp)
add_executable(offer_2_018 offer_2_018.cpp)
add_executable(offer_2_019 offer_2_019.cpp)
add_executable(offer_2_020 offer_2_020.cpp)
add_executable(offer_2_021 offer_2_021.cpp)
add_executable(offer_2_023 offer_2_023.cpp)
add_executable(offer_2_022 offer_2_022.cpp)
add_executable(offer_2_024 offer_2_024.cpp)
add_executable(offer_2_026 offer_2_026.cpp)