cmake_minimum_required(VERSION 3.17)
project(offer_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(offer_2 main.cpp)
add_executable(offer_2_010 offer_2_010.cpp)
add_executable(offer_2_004 offer_2_004.cpp)
add_executable(offer_2_083 offer_2_083.cpp)
add_executable(offer_2_084 offer_2_084.cpp)
add_executable(offer_2_005 offer_2_005.cpp)
add_executable(offer_2_007 offer_2_007.cpp)
add_executable(offer_2_006 offer_2_006.cpp)
add_executable(offer_2_008 offer_2_008.cpp)
add_executable(offer_2_009 offer_2_009.cpp)
add_executable(offer_2_011 offer_2_011.cpp)
add_executable(offer_2_012 offer_2_012.cpp)
add_executable(offer_2_013 offer_2_013.cpp)
add_executable(offer_2_014 offer_2_014.cpp)
add_executable(offer_2_015 offer_2_015.cpp)
add_executable(offer_2_016 offer_2_016.cpp)
add_executable(offer_2_017 offer_2_017.cpp)
add_executable(offer_2_018 offer_2_018.cpp)
add_executable(offer_2_019 offer_2_019.cpp)
add_executable(offer_2_020 offer_2_020.cpp)
add_executable(offer_2_021 offer_2_021.cpp)
add_executable(offer_2_023 offer_2_023.cpp)
add_executable(offer_2_022 offer_2_022.cpp)
add_executable(offer_2_024 offer_2_024.cpp)
add_executable(offer_2_026 offer_2_026.cpp)
add_executable(offer_2_025 offer_2_025.cpp)
add_executable(offer_2_027 offer_2_027.cpp)
add_executable(offer_2_028 offer_2_028.cpp)
add_executable(offer_2_029 offer_2_029.cpp)
add_executable(offer_2_090 offer_2_090.cpp)
add_executable(offer_2_30 offer_2_30.cpp)
add_executable(offer_2_031 offer_2_031.cpp)
add_executable(offer_2_032 offer_2_032.cpp)
add_executable(offer_2_033 offer_2_033.cpp)
add_executable(offer_2_034 offer_2_034.cpp)
add_executable(offer_2_035 offer_2_035.cpp)
add_executable(offer_2_036 offer_2_036.cpp)
add_executable(offer_2_037 offer_2_037.cpp)
add_executable(offer_2_038 offer_2_038.cpp)
add_executable(offer_2_088 offer_2_088.cpp)