cmake_minimum_required(VERSION 3.17)
project(qiuzhao)

set(CMAKE_CXX_STANDARD 14)

add_executable(qiuzhao main.cpp)
add_executable(oppo_1 oppo/oppo_1.cpp)
add_executable(oppe_3 oppo/oppe_3.cpp)
add_executable(1 yuanrong/1.cpp)
add_executable(kedaxunfei_1 kedaxunfei/kedaxunfei_1.cpp)
add_executable(kedaxunfei_3 kedaxunfei/kedaxunfei_3.cpp)
add_executable(xiaohongshu_1 xiaohongshu/xiaohongshu_1.cpp)
add_executable(xiaohongshu_3 xiaohongshu/xiaohongshu_3.cpp)
add_executable(xindong_1 xindong/xindong_1.cpp)
add_executable(nongshang_1 nongshang/nongshang_1.cpp)
add_executable(zhongwang_1 zhongwang/zhongwang_1.cpp)
add_executable(jingdong_1 jingdong/jingdong_1.cpp)
add_executable(jingdong_3 jingdong/jingdong_3.cpp)
add_executable(hongruan_1 hongruan/hongruan_1.cpp)
add_executable(rongyao_1 rongyao/rongyao_1.cpp)
add_executable(rongyao_2 rongyao/rongyao_2.cpp)
add_executable(haikang_1 haikang/haikang_1.cpp)
add_executable(meituan_1 meituan/meituan_1.cpp)
add_executable(meituan_4 meituan/meituan_4.cpp)
add_executable(meituan_5 meituan/meituan_5.cpp)
add_executable(robo_1 robosense/robo_1.cpp)
add_executable(robo_3 robosense/robo_3.cpp)
add_executable(oppo_qiuzhao_1 oppo_qiuzhao/oppo_qiuzhao_1.cpp)
add_executable(oppo_qiuzhao_3 oppo_qiuzhao/oppo_qiuzhao_3.cpp)
add_executable(jike_1 jike/jike_1.cpp)
add_executable(lingxi_1 lingxihuyu/lingxi_1.cpp)
add_executable(lingxi_2 lingxihuyu/lingxi_2.cpp)
add_executable(lingxi_3 lingxihuyu/lingxi_3.cpp)
add_executable(lingxi_4 lingxihuyu/lingxi_4.cpp)
add_executable(lingxi_5 lingxihuyu/lingxi_5.cpp)
add_executable(eleme_1 eleme/eleme_1.cpp)
add_executable(eleme_3 eleme/eleme_3.cpp)
add_executable(taobao_1 taobao/taobao_1.cpp)
add_executable(taobao_3 taobao/taobao_3.cpp)
add_executable(xiaomi_1 xiaomi/xiaomi_1.cpp)
add_executable(xyz_2 xyz/xyz_2.cpp)
add_executable(xyz_1 xyz/xyz_1.cpp)
add_executable(xyz_4 xyz/xyz_4.cpp)